[package]
name = "childsize"
version = "0.1.0"
edition = "2021"

[dependencies.globset]
version = "0.4.13"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Recursively walk a directory.
[dependencies.walkdir]
version = "^2.3.3"

# A simple to use, efficient, and full-featured Command Line Argument Parser
[dependencies.clap]
version = "4.4"
features = ["derive"]

# A Rust crate for producing string-representations of numbers, formatted according to internatio…
[dependencies.num-format]
version = "0.4"
features = ["with-system-locale"]

# an utility for human-readable bytes representations
[dependencies.bytesize]
version = "1.3.0"

# Collection “literal” macros for HashMap, HashSet, BTreeMap, and BTreeSet.
[dev-dependencies.maplit]
version = "1.0.2"
